--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="style.css">
     <script src="./JavaScript/script.js" type="module" defer></script>
 
-    <title>Galaxia</title>
+<title>Galaxia</title>
 </head>
 <body class="">
     <nav>
@@ -26,7 +26,7 @@
     </nav>
     <main >
         <div class="button">
-            <button>Quero saber mais</button>
+            <button>Quero saber mais ❤️❤️❤️❤️😘❤️❤️❤️❤️🤦‍♂️😎😎😎😎😎😎🎶🎶😢😢</button>
         </div>
         <div id="conteudo"></div>
     </main>
