--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </nav>
     <main >
         <div class="button">
-            <button>Quero saber mais ❤️❤️❤️❤️😘❤️❤️❤️❤️🤦‍♂️😎😎😎😎😎😎🎶🎶😢😢</button>
+            <button>Quero saber mais </button>
         </div>
         <div id="conteudo"></div>
     </main>
